--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
+boto==2.48.0
+boto3==1.5.1
+botocore==1.8.16
+bz2file==0.98
+certifi==2017.11.5
+chardet==3.0.4
+decorator==4.1.2
+docutils==0.14
+gensim==3.2.0
+idna==2.6
+ipython==6.2.1
+ipython-genutils==0.2.0
+jedi==0.11.1
 jieba==0.39
+jmespath==0.9.3
+numpy==1.13.3
+parso==0.1.1
+pexpect==4.3.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+python-dateutil==2.6.1
+requests==2.18.4
+s3transfer==0.1.12
+scipy==1.0.0
+simplegeneric==0.8.1
+six==1.11.0
+smart-open==1.5.5
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
