--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+attrs==17.3.0
+bleach==2.1.2
 boto==2.48.0
 boto3==1.5.1
 botocore==1.8.16
@@ -6,27 +8,53 @@ certifi==2017.11.5
 chardet==3.0.4
 decorator==4.1.2
 docutils==0.14
+entrypoints==0.2.3
 gensim==3.2.0
+html5lib==1.0.1
 idna==2.6
+ipykernel==4.7.0
 ipython==6.2.1
 ipython-genutils==0.2.0
+ipywidgets==7.0.5
 jedi==0.11.1
 jieba==0.39
+Jinja2==2.10
 jmespath==0.9.3
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.0
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+MarkupSafe==1.0
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.2.2
 numpy==1.13.3
+pandocfilters==1.4.2
 parso==0.1.1
 pexpect==4.3.1
 pickleshare==0.7.4
+pluggy==0.6.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+py==1.5.2
 Pygments==2.2.0
+pytest==3.3.1
 python-dateutil==2.6.1
+pyzmq==16.0.3
+qtconsole==4.3.1
 requests==2.18.4
 s3transfer==0.1.12
 scipy==1.0.0
 simplegeneric==0.8.1
 six==1.11.0
 smart-open==1.5.5
+terminado==0.8.1
+testpath==0.3.1
+tornado==4.5.2
 traitlets==4.3.2
 urllib3==1.22
 wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.0.8
