--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,8 @@ prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 py==1.5.2
 Pygments==2.2.0
+pymongo==3.6.0
+PyMySQL==0.8.0
 pytest==3.3.1
 python-dateutil==2.6.1
 pyzmq==16.0.3
