--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ chardet==3.0.4
 decorator==4.1.2
 docutils==0.14
 entrypoints==0.2.3
+fasttext==0.8.3
+future==0.16.0
 gensim==3.2.0
 html5lib==1.0.1
 idna==2.6
